womtool/src/test/resources/validate/wdl/wdl_draft2/invalid/array_autoboxing/array_autoboxing.wdl
workflow bad_autobox {
  Int i = 5

  # Bad autobox!
  Array[Int] bad_is = i

  # Good manual-box!
  Array[Int] good_is = [ i ]
}
